<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_worker_detail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_worker_detail">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/padding_start_content_card_view"
                    android:paddingEnd="@dimen/padding_end_content_card_view">

                    <TextView
                        android:id="@+id/tv_basic_info_title"
                        style="@style/TextAppearance.MaterialComponents.Headline4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_view_basic_info_title"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/detail_view_name_hint"
                        app:layout_constraintTop_toBottomOf="@id/tv_basic_info_title">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            tools:text="Carlos García" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_profession"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/detail_view_profession_hint"
                        app:layout_constraintTop_toBottomOf="@id/til_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_profession"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            tools:text="Metalworker" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_age"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/grid_0_5"
                        android:hint="@string/detail_view_age_hint"
                        app:layout_constraintEnd_toStartOf="@id/til_gender"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/til_profession">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            tools:text="21" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_gender"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/grid_0_5"
                        android:hint="@string/detail_view_gender_hint"
                        app:layout_constraintEnd_toStartOf="@id/til_height"
                        app:layout_constraintStart_toEndOf="@id/til_age"
                        app:layout_constraintTop_toBottomOf="@id/til_profession">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            tools:text="Male" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_height"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/detail_view_height_hint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/til_gender"
                        app:layout_constraintTop_toBottomOf="@id/til_profession"
                        app:suffixText="cm">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_height"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            tools:text="192" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/detail_view_email_hint"
                        app:layout_constraintTop_toBottomOf="@id/til_age">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            tools:text="carlosgarcia@oompamail.com" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_additional_info_title"
                        style="@style/TextAppearance.MaterialComponents.Headline4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_view_additional_info_title"
                        app:layout_constraintTop_toBottomOf="@id/til_email" />

                    <TextView
                        android:id="@+id/tv_favorite_info_subtitle"
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_view_favorite_info_subtitle"
                        app:layout_constraintTop_toBottomOf="@id/tv_additional_info_title" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_color"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/grid_0_5"
                        android:hint="@string/detail_view_color_hint"
                        app:layout_constraintEnd_toStartOf="@id/til_food"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_favorite_info_subtitle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_color"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            tools:text="Aquamarine" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_food"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/detail_view_food_hint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/til_color"
                        app:layout_constraintTop_toBottomOf="@id/tv_favorite_info_subtitle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_food"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            tools:text="Carpaccio" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_quota_info_subtitle"
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/grid_0_5"
                        android:text="@string/detail_view_quota_subtitle"
                        app:layout_constraintTop_toBottomOf="@id/til_food" />

                    <TextView
                        android:id="@+id/tv_quota_info"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tv_quota_info_subtitle"
                        tools:text="alnksfoasnpoñahnsfpoñaufpauiwbnfipqñauprfjòqirfjoqìwrjoqiwjeóqìwjeoqìwjeqoiwrjeouehneiwbrniergnoiergnoeirtgoeirngoejthoñruesnghinesrogñuhzeroginesrgibneoghesrguhzeorgjunaesghesghr" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
